--- a/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/ManualTrackWindow.fxml
@@ -4,6 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -57,12 +60,32 @@
                   <Button fx:id="previousButton" minWidth="60.0" mnemonicParsing="false" onAction="#handlePrevious" prefHeight="25.0" prefWidth="80.0" text="Previous" />
                </children>
             </GridPane>
+            <Label layoutX="291.0" layoutY="92.0" text="Current Time:" />
          </children>
       </AnchorPane>
    </bottom>
    <center>
       <VBox BorderPane.alignment="CENTER">
          <children>
+            <MenuBar>
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Close" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
             <Pane fx:id="paneContainingCanvas" prefHeight="548.0" prefWidth="849.0">
                <children>
                   <StackPane fx:id="stackPane">
@@ -78,14 +101,4 @@
          </children>
       </VBox>
    </center>
-   <top>
-      <BorderPane prefHeight="23.0" BorderPane.alignment="CENTER">
-         <center>
-            <Label text="Current Time:" BorderPane.alignment="CENTER" />
-         </center>
-         <right>
-            <Label fx:id="currentFrameLabel" prefHeight="17.0" prefWidth="69.0" BorderPane.alignment="CENTER" />
-         </right>
-      </BorderPane>
-   </top>
 </BorderPane>
