--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -20,22 +20,18 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-              <MenuBar>
+            <MenuBar>
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                     <MenuItem mnemonicParsing="false" text="Save" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Calibration Tool">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
+                   <MenuItem mnemonicParsing="false" onAction="#menuFileExit" text="Close" />
+                     <MenuItem mnemonicParsing="false" onAction="#menuFileSave" text="Save" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
+                   <MenuItem mnemonicParsing="false" onAction="#menuHelpInstruction" text="Instruction" />
+                    <MenuItem mnemonicParsing="false" onAction="#menuHelpAbout" text="About" />
                   </items>
                 </Menu>
               </menus>
@@ -93,15 +89,4 @@
          </children>
       </AnchorPane>
    </bottom>
-<<<<<<< HEAD
 </BorderPane>
-=======
-   <top>
-      <BorderPane prefHeight="18.0" prefWidth="750.0" BorderPane.alignment="CENTER">
-         <right>
-            <Label fx:id="currentFrameLabel" prefHeight="17.0" prefWidth="168.0" BorderPane.alignment="CENTER" />
-         </right>
-      </BorderPane>
-   </top>
-</BorderPane>
->>>>>>> 06b214467d0bfa988114c4b2837b035f9df14ec2
