--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -51,8 +51,6 @@
          <children>
             <Button fx:id="exportButton" layoutX="686.0" layoutY="153.0" mnemonicParsing="false" onAction="#handleExport" text="Export" />
             <Button fx:id="backButton" layoutX="14.0" layoutY="153.0" mnemonicParsing="false" onAction="#handleBack" text="Back" />
-            <Label fx:id="startFrameLabel" layoutX="13.0" layoutY="17.0" prefHeight="17.0" prefWidth="85.0" />
-            <Label fx:id="endFrameLabel" layoutX="658.0" layoutY="6.0" prefHeight="17.0" prefWidth="78.0" />
             <GridPane layoutX="490.0" layoutY="47.0" prefHeight="81.0" prefWidth="246.0">
                <columnConstraints>
                   <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -73,12 +71,12 @@
             </GridPane>
             <GridPane layoutX="227.0" layoutY="10.0" prefHeight="30.0" prefWidth="269.0">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
                   <Button fx:id="playButton" mnemonicParsing="false" onAction="#handlePlay" prefHeight="25.0" prefWidth="80.0" text="Play" GridPane.columnIndex="1" />
@@ -86,7 +84,25 @@
                   <Button fx:id="previousButton" minWidth="60.0" mnemonicParsing="false" onAction="#handlePrevious" prefHeight="25.0" prefWidth="80.0" text="Previous" />
                </children>
             </GridPane>
-            <Label fx:id="currentFrameLabel" layoutY="79.0" prefHeight="17.0" prefWidth="168.0" />
+            <GridPane layoutX="14.0" layoutY="14.0">
+              <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="endFrameLabel" prefHeight="17.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="currentFrameLabel" prefHeight="17.0" prefWidth="60.0" GridPane.columnIndex="1" />
+                  <Label text="Current Time: " />
+                  <Label text="Start Time: " GridPane.rowIndex="1" />
+                  <Label text="End Time: " GridPane.rowIndex="2" />
+                  <Label fx:id="startFrameLabel" prefHeight="17.0" prefWidth="60.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
          </children>
       </AnchorPane>
    </bottom>
