--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -32,6 +32,8 @@
 									onAction="#menuFileExit" text="Close" />
 								<MenuItem mnemonicParsing="false"
 									onAction="#menuFileSave" text="Save" />
+									<MenuItem mnemonicParsing="false"
+									onAction="#menuFileOpen" text="Open" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="false" text="Calibration Tool">
