--- a/ProjectBittern/src/edu/augustana/csc285/bittern/FirstWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/FirstWindow.fxml
@@ -66,6 +66,7 @@
 					<columnConstraints>
 						<ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 						<ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 					</columnConstraints>
 					<rowConstraints>
 						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -82,6 +83,7 @@
 						<ComboBox fx:id="stepBox" onAction="#handleStepBox" prefHeight="25.0" prefWidth="95.0" promptText="Time Step" GridPane.rowIndex="2" />
 						<Button fx:id="addChickButton" mnemonicParsing="false" onAction="#handleAddChickButton" prefHeight="25.0" prefWidth="95.0" text="Add Chick" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 						<Button fx:id="removeChickButton" mnemonicParsing="false" onAction="#handleRemoveChickButton" prefHeight="25.0" prefWidth="95.0" text="Remove Chick" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                  <Button fx:id="setEmptyFrameButton" mnemonicParsing="false" onAction="#handleSetEmptyImage" text="Set Empty Img" GridPane.columnIndex="2" GridPane.rowIndex="3" />
 					</children>
 				</GridPane>
 				<Label fx:id="showActualLengthY" layoutX="536.0" layoutY="92.0" prefHeight="17.0" prefWidth="202.0" text="Actual Vertical Length : " />
