--- a/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
+++ b/ProjectBittern/src/edu/augustana/csc285/bittern/SecondWindow.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="800.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
+<BorderPane prefHeight="800.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.bittern.SecondWindowController">
 	<center>
 		<VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
 			<children>
@@ -76,7 +76,7 @@
 						<Button fx:id="removeTrackButton" mnemonicParsing="false" onAction="#handleRemoveAutoTrack" prefWidth="115.0" text="Remove AutoTrack" GridPane.columnIndex="1" />
 						<ComboBox fx:id="usedTracksBox" prefWidth="115.0" promptText="Used Tracks" />
 						<ComboBox fx:id="chicksBox" onAction="#handleChicksBox" prefHeight="25.0" prefWidth="115.0" promptText="Current Chick" visibleRowCount="3" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" prefHeight="27.0" prefWidth="116.0" text="Show Path" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="showCurrentPathButton" mnemonicParsing="false" onAction="#handleShowCurrentPath" prefHeight="27.0" prefWidth="116.0" text="Show Path" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 					</children>
 				</GridPane>
 				<GridPane layoutX="227.0" layoutY="10.0" prefHeight="30.0" prefWidth="269.0">
